[package]
name = "rowser"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx_glyph = "0.15.0"
cgmath = "0.17.0"
glutin = "*"
gfx_window_glutin = "*"
gfx = "0.18.1"
log = "0.4.0"
env_logger = "0.6.2"
spin_sleep = "0.3"
reqwest = "0.9.20"
html5ever = "*"
tendril = "*"